updated the frontend

--- a/fitbenchmarking/templates/index_page.html
+++ b/fitbenchmarking/templates/index_page.html
@@ -10,6 +10,7 @@
     <body>
         <div class="box">
             <div class="container">
+                <img src="images/fitbenchmarking_logo.png" alt="Fitbenchmarking logo">
                 <div class="post-title">
                     <h1>FitBenchmarking results page</h1>
                     <hr />
