--- a/fitbenchmarking/templates/problem_index_page.html
+++ b/fitbenchmarking/templates/problem_index_page.html
@@ -20,6 +20,7 @@
                 <div class="row">
                     <p>FitBenchmarking is a tool for comparing different fitting software based on their accuracy and runtimes.
                     </p>
+                    <p>The results were generated using <b>python</b> <span class="pill">{{ python_version }}</span> and <b>numpy</b> <span class="pill">{{ numpy_version }}</span>.</p>
                 </div>
                 <h4>Table formats</h4>
                 {{ index }}
