--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -23,9 +23,9 @@
                         <label for="start-accordion">Problem Outline</label>
                     </h2>
                     <div class="content">
-                        <p><em>Number of parameters</em>: {{ n_params }}</p>
-                        <p><em>Number of data points</em>: {{ n_data_points }}</p>
-                        <p><em>Functions</em>:</p>
+                        <p><b>Number of parameters</b>: <span class="pill">{{ n_params }}</span></p>
+                        <p><b>Number of data points</b>: <span class="pill">{{ n_data_points }}</span></p>
+                        <p><b>Functions</b>:</p>
                         <table>
                             <colgroup>
                                 <col width="45%" />
@@ -34,7 +34,7 @@
                             <thead valign="bottom">
                                 <tr>
                                     <th class="head">Form</th>
-                                    <th class="head">Parameters</th>
+                                    <th class="head">Initial Parameters</th>
                                 </tr>
                             </thead>
                             <tbody valign="top">
@@ -66,13 +66,13 @@
                     {% if is_best_fit %}
                         <p><b>This is the best fit of the minimizers used.</b></p>
                     {% endif %}
-                    <p><em>Minimizer</em>: {{ minimizer }}</p>
-                    <p><em>Accuracy</em>: {{ accuracy }}</p>
-                    <p><em>Runtime</em>: {{ runtime }} seconds</p>
-                    <p><em>Emissions</em>: {{ emissions }}</p>
-                    <p><em>Number of iterations</em>: {{ iteration_count }}</p>
-                    <p><em>Number of function evaluations</em>: {{ func_evals }}</p>
-                    <p><em>Functions</em>:</p>
+                    <p><b>Minimizer</b>: <span class="pill">{{ minimizer }}</span></p>
+                    <p><b>Accuracy</b>: <span class="pill">{{ accuracy }}</span></p>
+                    <p><b>Runtime</b>: <span class="pill">{{ runtime }} seconds</span></p>
+                    <p><b>Emissions</b>: <span class="pill">{{ emissions }}</span></p>
+                    <p><b>Number of iterations</b>: <span class="pill">{{ iteration_count }}</span></p>
+                    <p><b>Number of function evaluations</b>: <span class="pill">{{ func_evals }}</span></p>
+                    <p><b>Functions</b>:</p>
                     <table>
                         <colgroup>
                             <col width="36%" />
@@ -80,7 +80,7 @@
                         </colgroup>
                         <thead valign="bottom">
                             <tr><th class="head">Form</th>
-                            <th class="head">Parameters</th>
+                            <th class="head">Fitted Parameters</th>
                         </thead>
                         <tbody valign="top">
                             <tr>
