--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -64,7 +64,7 @@
                 </h2>
                 <div class="content">
                     {% if is_best_fit %}
-                        <p><b>This is the best fit of the minimizers used.</b></p>
+                        <p>This is the best fit of the minimizers used.</p>
                     {% endif %}
                     <p><b>Minimizer</b>: <span class="pill">{{ minimizer }}</span></p>
                     <p><b>Accuracy</b>: <span class="pill">{{ accuracy }}</span></p>
