--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -167,9 +167,8 @@
                                                 <span class='pill'>n</span> <b>problems</b> and <span class='pill'>m</span> <b>cost functions</b>, the resulting profile plots will have
                                                 <span class='pill'>n * m</span> <b>steps</b> on the y-axis.</li>
                                             <li>This is a Dolan-Moré performance profile.
-                                                The solvers appearing in the <b>top left corner</b> may be considered the <b>best</b>
-                                                performing on this test set.</li>
-                                            <li>See <a href="https://doi.org/10.1007/s101070100263">Dolan and Moré (2001)</a> for more information.</li>
+                                                The solvers appearing in the <b>top left corner</b> may be considered the <b>best</b> performing on this test set.
+                                                See <a href="https://doi.org/10.1007/s101070100263">Dolan and Moré (2001)</a> for more information.</li>
                                         </ul>
                                     </div>
                                     <br>
