changes from code reveiw

--- a/fitbenchmarking/templates/table_template.html
+++ b/fitbenchmarking/templates/table_template.html
@@ -170,13 +170,13 @@
                                                 The solvers appearing in the <b>top left corner</b> may be considered the <b>best</b> performing on this test set.
                                                 See <a href="https://doi.org/10.1007/s101070100263">Dolan and Moré (2001)</a> for more information.</li>
                                         </ul>
+                                        <br>
+                                        <p>The plot is such that lines can be removed by clicking on the respective minimizer name in the dropdown
+                                            or hidden by unselecting the minimizer in the legend. If a solver is removed through the dropdown,
+                                            the graph gets recalculated based on the best minimizer among the ones shown. On the other hand, if a solver
+                                            is unselected in the legend, the line gets temporarily hidden and the plot is not recalculated.
+                                            <b>We recommend only analysing graphs where lines are removed via the dropdown.</b></p>
                                     </div>
-                                    <br>
-                                    The plot is such that lines can be removed by clicking on the respective minimizer name in the dropdown
-                                    or hidden by unselecting the minimizer in the legend. If a solver is removed through the dropdown,
-                                    the graph gets recalculated based on the best minimizer among the ones shown. On the other hand, if a solver
-                                    is unselected in the legend, the line gets temporarily hidden and the plot is not recalculated.
-                                    We recommend only analysing graphs where lines are removed via the dropdown.
                                 </p>
                             </div>
                         </section>
