switch from emissions to energy usage

--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -69,7 +69,7 @@
                     <p><b>Minimizer</b>: <span class="pill">{{ minimizer }}</span></p>
                     <p><b>Accuracy</b>: <span class="pill">{{ accuracy }}</span></p>
                     <p><b>Runtime</b>: <span class="pill">{{ runtime }} seconds</span></p>
-                    <p><b>Emissions</b>: <span class="pill">{{ emissions }}</span></p>
+                    <p><b>Energy Usage</b>: <span class="pill">{{ energy }}</span></p>
                     <p><b>Number of iterations</b>: <span class="pill">{{ iteration_count }}</span></p>
                     <p><b>Number of function evaluations</b>: <span class="pill">{{ func_evals }}</span></p>
                     <p><b>Functions</b>:</p>
