--- a/fitbenchmarking/templates/css/custom_style.css
+++ b/fitbenchmarking/templates/css/custom_style.css
@@ -96,3 +96,26 @@ a {
   max-width: 800px;
   margin: 20px auto;
 }
+
+.table-row {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.left-column {
+  flex: 0 0 85%;
+  padding-right: 10px;
+}
+
+.right-column {
+  flex: 0 0 15%;
+  display: flex;
+  justify-content: center;
+}
+
+.right-column form button img {
+  width: auto;
+  height: 110px;
+}
