--- a/fitbenchmarking/templates/css/custom_style.css
+++ b/fitbenchmarking/templates/css/custom_style.css
@@ -97,6 +97,34 @@ a {
   margin: 20px auto;
 }
 
+.error-table {
+  width: 60%;
+  text-align: center;
+}
+
+.error-table th {
+  background-color: #282828;
+  color: white;
+}
+
+.error-table .even-row {
+  background-color: #f2f2f2;
+}
+
+.error-table .odd-row {
+  background-color: #ffffff;
+}
+
+.simple-table {
+  width: 100%;
+  text-align: center;
+}
+
+.simple-table th {
+  background-color:#66686b;
+  color: white;
+}
+
 .table-row {
   display: flex;
   flex-wrap: wrap;
