Measure energy usage instead of emissions (#1377)
* switch from emissions to energy usage

* remove local changes

* Discard changes to .gitignore

* Update fitbenchmarking/core/results_output.py

Co-authored-by: RabiyaF <47083562+RabiyaF@users.noreply.github.com>

* Update fitbenchmarking/utils/fitbm_result.py

Co-authored-by: RabiyaF <47083562+RabiyaF@users.noreply.github.com>

* Add units

Co-authored-by: RabiyaF <47083562+RabiyaF@users.noreply.github.com>

* rename docs page

* line length fix

* Reduce interval for measuring power usage

Co-authored-by: RabiyaF <47083562+RabiyaF@users.noreply.github.com>

* ruff format fix

---------

Co-authored-by: RabiyaF <47083562+RabiyaF@users.noreply.github.com>

--- a/fitbenchmarking/templates/fitting_report_template.html
+++ b/fitbenchmarking/templates/fitting_report_template.html
@@ -69,7 +69,7 @@
                     <p>Minimizer: <b>{{ minimizer }}</b></p>
                     <p>Accuracy: <b>{{ accuracy }}</b></p>
                     <p>Runtime: <b>{{ runtime }} seconds</b></p>
-                    <p>Emissions: <b>{{ emissions }}</b></p>
+                    <p>Energy Usage: <b>{{ energy }}</b></p>
                     <p>Number of iterations: <b>{{ iteration_count }}</b></p>
                     <p>Number of function evaluations: <b>{{ func_evals }}</b></p>
                     <p>Functions:</p>
